[workspace]
members = [
    "data",
    "dtls",
    "examples",
    "ice",
    "interceptor",
    "mdns",
    "media",
    "rtcp",
    "rtp",
    "sctp",
    "sdp",
    "srtp",
    "stun",
    "turn",
    "util",
    "webrtc",
]
resolver = "2"

[profile.dev]
opt-level = 0

[workspace.package]
version = "0.17.1"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
license = "MIT/Apache-2.0"
homepage = "https://webrtc.rs"
documentation = "https://docs.rs/webrtc"
repository = "https://github.com/webrtc-rs/webrtc"
keywords = ["sansio", "networking", "protocols"]
categories = ["network-programming"]

[workspace.dependencies]
webrtc = { version = "0.17.1", path = "webrtc" }
data = { version = "0.17.1", path = "data", package = "webrtc-data" }
dtls = { version = "0.17.1", path = "dtls" }
ice = { version = "0.17.1", path = "ice", package = "webrtc-ice" }
interceptor = { version = "0.17.1", path = "interceptor" }
mdns = { version = "0.17.1", path = "mdns", package = "webrtc-mdns" }
media = { version = "0.17.1", path = "media", package = "webrtc-media" }
rtcp = { version = "0.17.1", path = "rtcp" }
rtp = { version = "0.17.1", path = "rtp" }
sctp = { version = "0.17.1", path = "sctp", package = "webrtc-sctp" }
sdp = { version = "0.17.1", path = "sdp" }
srtp = { version = "0.17.1", path = "srtp", package = "webrtc-srtp" }
stun = { version = "0.17.0", path = "stun" }
turn = { version = "0.17.1", path = "turn" }
util = { version = "0.17.1", path = "util", package = "webrtc-util", default-features = false }
