[package]
name = "webrtc-constraints"
authors = ["Vincent Esche <regexident@gmail.com>"]
license = "MIT/Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9.1"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"], optional = true }
ordered-float = { version = "3.0.0", default-features = false }

[dev-dependencies]
env_logger = "0.9.0"
serde_json = { version = "1.0", features = ["preserve_order"] }

[features]
default = []
serde = ["dep:serde", "indexmap/serde"]
