[package]
name = "webrtc-constraints"
version = "0.1.0"
authors = ["Vincent Esche <regexident@gmail.com>"]
edition = "2021"
description = "A pure Rust implementation of WebRTC Media Constraints API"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/webrtc-constraints"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/constraints"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9.1"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"], optional = true }
ordered-float = { version = "3.0.0", default-features = false }

[dev-dependencies]
env_logger = "0.9.0"
lazy_static = "1.4.0"
serde_json = { version = "1.0.91", features = ["preserve_order"] }

[features]
default = ["serde"]
serde = ["dep:serde", "indexmap/serde"]

[[example]]
name = "json"
path = "examples/json.rs"
required-features = ["serde"]
