[package]
name = "webrtc-constraints"
version = "0.1.0"
authors = ["Vincent Esche <regexident@gmail.com>"]
edition = "2021"
description = "A pure Rust implementation of WebRTC Media Constraints API"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/webrtc-constraints"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/constraints"

[dependencies]
indexmap = "2"
serde = { version = "1", features = ["derive"], optional = true }
ordered-float = { version = "4", default-features = false }
thiserror = "1"

[dev-dependencies]
env_logger = "0.10"
lazy_static = "1"
serde_json = { version = "1", features = ["preserve_order"] }

[features]
default = ["serde"]
serde = ["dep:serde", "indexmap/serde"]

[[example]]
name = "json"
path = "examples/json.rs"
required-features = ["serde"]
