[package]
name = "webrtc-data"
version = "0.7.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "A pure Rust implementation of WebRTC DataChannel API"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/webrtc-data"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/data"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { version = "0.7", path = "../util", package = "webrtc-util", default-features = false, features = ["conn", "marshal"]  }
sctp = { version = "0.8", path = "../sctp", package = "webrtc-sctp" }

tokio = { version = "1", features = ["full"] }
bytes = "1"
log = "0.4"
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4" # must match the min version of the `tokio` crate above
env_logger = "0.10"
chrono = "0.4"
