[package]
name = "webrtc-data"
version = "0.9.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "A pure Rust implementation of WebRTC DataChannel API"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/webrtc-data"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/webrtc/tree/master/data"

[dependencies]
util = { version = "0.9.0", path = "../util", package = "webrtc-util", default-features = false, features = ["conn", "marshal"]  }
sctp = { version = "0.10.0", path = "../sctp", package = "webrtc-sctp" }

tokio = { version = "1.32.0", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
bytes = "1"
log = "0.4"
thiserror = "1"
portable-atomic = "1.6"

[dev-dependencies]
tokio-test = "0.4" # must match the min version of the `tokio` crate above
env_logger = "0.11.3"
chrono = "0.4.28"
