[package]
name = "webrtc-data"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A pure Rust implementation of WebRTC DataChannel API"
license.workspace = true
documentation = "https://docs.rs/webrtc-data"
homepage.workspace = true
repository = "https://github.com/webrtc-rs/webrtc/tree/master/data"

[dependencies]
util = { workspace = true, default-features = false, features = ["conn", "marshal"] }
sctp.workspace = true

tokio = { version = "1.32.0", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
bytes = "1"
log = "0.4"
thiserror = "1"
portable-atomic = "1.6"

[dev-dependencies]
env_logger = "0.11.3"
chrono = "0.4.28"
