[package]
name = "dtls"
version = "0.1.0"
authors = ["Rain Liu <yuliu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
byteorder = "1.3.2"
lazy_static = "1.3.0"
rand_core = "0.5.1"
elliptic-curve = {version = "0.6.6", features=["default", "ecdh", "zeroize"]}
p256 = { version = "0.5.2", features=["default", "ecdh", "zeroize", "ecdsa", "ecdsa-core"] }
p384 = "0.4.1"
rand = "0.7.3"
hmac = "0.10.1"
sha-1 = "0.9.1"
sha2 = "0.9.1"
aes = "0.6.0"
block-modes = "0.7.0"
aes-gcm = "0.8.0"
ccm = "0.3.0"
tokio = { version = "0.3", features = ["full"] }
async-trait = "0.1"
ed25519 = "1.0"
ed25519-dalek = "1.0"
x25519-dalek = "1.1.0"
signature = "1.2.2"
rsa = "0.3.0"
x509-parser = { version = "0.8.2", features = ["default", "verify"]}
der-parser = "4.1.0"
bincode = "1.3.1"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"

[dev-dependencies]
tokio-test = "0.3"
env_logger = "0.8"
chrono = "0.4.19"