[package]
name = "webrtc-dtls"
version = "0.7.0"
authors = ["Rain Liu <yuliu@webrtc.rs>"]
edition = "2021"
description = "A pure Rust implementation of DTLS"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/webrtc-dtls"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/dtls"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { version = "0.7.0", path = "../util", package = "webrtc-util", default-features = false, features = ["conn"] }

byteorder = "1"
rand_core = "0.6.3"
elliptic-curve = { version = "0.12.1", features = ["default", "ecdh"] }
# required because elliptic-curve requires "0.12", but "0.12.0" does not compile.
hkdf = "~0.12.1"
# required because elliptic-curve requires "3", but "3.0.0" does not compile.
curve25519-dalek = "3.2"
p256 = { version = "0.11.1", features = ["default", "ecdh", "ecdsa"] }
p384 = "0.11.2"
rand = "0.8.5"
hmac = "0.12.1"
sec1 = { version = "0.3.0", features = [ "std" ] }
sha1 = "0.10.5"
sha2 = "0.10.6"
aes = "0.6.0"
block-modes = "0.7.0"
aes-gcm = "0.10.1"
ccm = "0.3.0"
tokio = { version = "1.19", features = ["full"] }
async-trait = "0.1.56"
x25519-dalek = "2.0.0-pre.1"
signature = "1.2.2"
oid-registry = "0.6.0"
x509-parser = "0.13.2"
der-parser = "8.1"
rcgen = "0.9.2"
ring = "0.16.19"
webpki = "0.21.4"
rustls = { version = "0.19.0", features = ["dangerous_configuration"]}
bincode = "1.3"
serde = { version = "1.0.110", features = ["derive"] }
subtle = "2.4"
log = "0.4.16"
thiserror = "1.0"
pem = { version = "1", optional = true }

[dev-dependencies]
tokio-test = "0.4.0" # must match the min version of the `tokio` crate above
env_logger = "0.9.0"
chrono = "0.4.23"
clap = "3.2.6"
hub = {path = "examples/hub"}

[features]
pem = ["dep:pem"]

[[example]]
name = "dial_psk"
path = "examples/dial/psk/dial_psk.rs"
bench = false

[[example]]
name = "dial_selfsign"
path = "examples/dial/selfsign/dial_selfsign.rs"
bench = false

[[example]]
name = "dial_verify"
path = "examples/dial/verify/dial_verify.rs"
bench = false

[[example]]
name = "listen_psk"
path = "examples/listen/psk/listen_psk.rs"
bench = false

[[example]]
name = "listen_selfsign"
path = "examples/listen/selfsign/listen_selfsign.rs"
bench = false

[[example]]
name = "listen_verify"
path = "examples/listen/verify/listen_verify.rs"
bench = false
