[package]
name = "e2e"
version = "0.1.0"
authors = ["Ben Little <ben.little@benlittle.dev>"]
edition = "2018"

[features]
mock = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.1" }
