[package]
name = "examples"
version = "0.0.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2018"
description = "Examples of WebRTC.rs stack"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/examples"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/examples"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
