[package]
name = "examples"
version = "0.2.1"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2018"
description = "Examples of WebRTC.rs stack"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/examples"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/examples"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
util = { package = "webrtc-util", version = "0.5.0" }
rtp = "0.6.0"
rtcp = "0.5.0"
data = { package = "webrtc-data", version = "0.3.0" }
interceptor = "0.4.0"
media = { package = "webrtc-media", version = "0.4.0" }
webrtc = "0.2.1" #{ path = "..", version = "0.2.1" } #
tokio = { version = "1.12.0", features = ["full"] }
env_logger = "0.9.0"
clap = "2"
hyper = { version = "0.14.13", features = ["full"] }
signal = {path = "examples/signal" }
tokio-util = "0.6.8"
anyhow = "1.0"
chrono = "0.4.19"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1"
lazy_static = "1.4"
rand = "0.8"
console-subscriber = { git = "https://github.com/tokio-rs/console", branch = "main" }

[profile.dev]
opt-level = 0

[[example]]
name = "broadcast"
path = "examples/broadcast/broadcast.rs"
bench = false

[[example]]
name = "data-channels"
path = "examples/data-channels/data-channels.rs"
bench = false

[[example]]
name = "data-channels-close"
path = "examples/data-channels-close/data-channels-close.rs"
bench = false

[[example]]
name = "data-channels-create"
path = "examples/data-channels-create/data-channels-create.rs"
bench = false

[[example]]
name = "data-channels-detach"
path = "examples/data-channels-detach/data-channels-detach.rs"
bench = false

[[example]]
name = "data-channels-detach-create"
path = "examples/data-channels-detach-create/data-channels-detach-create.rs"
bench = false

[[example]]
name = "data-channels-flow-control"
path = "examples/data-channels-flow-control/data-channels-flow-control.rs"
bench = false

[[example]]
name = "insertable-streams"
path = "examples/insertable-streams/insertable-streams.rs"
bench = false

[[example]]
name = "play-from-disk-vp8"
path = "examples/play-from-disk-vp8/play-from-disk-vp8.rs"
bench = false

[[example]]
name = "play-from-disk-vp9"
path = "examples/play-from-disk-vp9/play-from-disk-vp9.rs"
bench = false

[[example]]
name = "play-from-disk-h264"
path = "examples/play-from-disk-h264/play-from-disk-h264.rs"
bench = false

[[example]]
name = "play-from-disk-renegotiation"
path = "examples/play-from-disk-renegotiation/play-from-disk-renegotiation.rs"
bench = false

[[example]]
name = "reflect"
path = "examples/reflect/reflect.rs"
bench = false

[[example]]
name = "rtp-forwarder"
path = "examples/rtp-forwarder/rtp-forwarder.rs"
bench = false

[[example]]
name = "rtp-to-webrtc"
path = "examples/rtp-to-webrtc/rtp-to-webrtc.rs"
bench = false

[[example]]
name = "save-to-disk-vpx"
path = "examples/save-to-disk-vpx/save-to-disk-vpx.rs"
bench = false

[[example]]
name = "save-to-disk-h264"
path = "examples/save-to-disk-h264/save-to-disk-h264.rs"
bench = false

[[example]]
name = "simulcast"
path = "examples/simulcast/simulcast.rs"
bench = false

[[example]]
name = "swap-tracks"
path = "examples/swap-tracks/swap-tracks.rs"
bench = false

[[example]]
name = "ortc"
path = "examples/ortc/ortc.rs"
bench = false

[[example]]
name = "offer"
path = "examples/offer-answer/offer.rs"
bench = false

[[example]]
name = "answer"
path = "examples/offer-answer/answer.rs"
bench = false

[[example]]
name = "ice-restart"
path = "examples/ice-restart/ice-restart.rs"
bench = false
