[package]
name = "webrtc-ice"
version = "0.9.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "A pure Rust implementation of ICE"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/webrtc-ice"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/ice"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { version = "0.7.0", path = "../util", package = "webrtc-util", default-features = false, features = ["conn", "vnet", "sync"] }
turn = { version = "0.6.0", path = "../turn" }
stun = { version = "0.4.3", path = "../stun" }
mdns = { version = "0.5.0", path = "../mdns", package = "webrtc-mdns" }

arc-swap = "1.5"
async-trait = "0.1.56"
crc = "3.0"
log = "0.4.16"
rand = "0.8.5"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.19", features = ["full"] }
url = "2.2"
uuid = { version = "1.1", features = ["v4"] }
waitgroup = "0.1.2"

[dev-dependencies]
tokio-test = "0.4.0" # must match the min version of the `tokio` crate above
regex = "1"
env_logger = "0.9.0"
chrono = "0.4.23"
ipnet = "2.5.0"
clap = "3.2.6"
lazy_static = "1.4.0"
hyper = { version = "0.14.19", features = ["full"] }
sha1 = "0.10.5"

[[example]]
name = "ping_pong"
path = "examples/ping_pong.rs"
bench = false
