[package]
name = "webrtc-ice"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A pure Rust implementation of ICE"
license.workspace = true
documentation = "https://docs.rs/webrtc-ice"
homepage.workspace = true
repository = "https://github.com/webrtc-rs/webrtc/tree/master/ice"

[dependencies]
util = { workspace = true, default-features = false, features = ["conn", "vnet", "sync"] }
turn.workspace = true
stun.workspace = true
mdns.workspace = true

arc-swap = "1"
async-trait = "0.1"
crc = "3"
log = "0.4"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.32.0", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
url = "2"
uuid = { version = "1", features = ["v4"] }
waitgroup = "0.1"
portable-atomic = "1.6"

[dev-dependencies]
regex = "1.9.5"
env_logger = "0.11.3"
chrono = "0.4.28"
ipnet = "2"
clap = "3"
lazy_static = "1"
hyper = { version = "0.14.27", features = ["full"] }
sha1 = "0.10"

[[example]]
name = "ping_pong"
path = "examples/ping_pong.rs"
bench = false
