[package]
name = "interceptor"
version = "0.12.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "A pure Rust implementation of Pluggable RTP/RTCP processors"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/interceptor"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/webrtc/tree/master/interceptor"

[dependencies]
util = { version = "0.9.0", path = "../util", package = "webrtc-util", default-features = false, features = ["marshal", "sync"] }
rtp = { version = "0.11.0", path = "../rtp" }
rtcp = { version = "0.11.0", path = "../rtcp" }
srtp = { version = "0.13.0", path = "../srtp", package = "webrtc-srtp" }

tokio = { version = "1.32.0", features = ["sync", "time"] }
async-trait = "0.1"
bytes = "1"
thiserror = "1"
rand = "0.8"
waitgroup = "0.1"
log = "0.4"
portable-atomic = "1.6"

[dev-dependencies]
tokio-test = "0.4"
chrono = "0.4.28"
