[package]
name = "interceptor"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A pure Rust implementation of Pluggable RTP/RTCP processors"
license.workspace = true
documentation = "https://docs.rs/interceptor"
homepage.workspace = true
repository = "https://github.com/webrtc-rs/webrtc/tree/master/interceptor"

[dependencies]
util = { workspace = true, default-features = false, features = ["marshal", "sync"] }
rtp.workspace = true
rtcp.workspace = true
srtp.workspace = true

tokio = { version = "1.32.0", features = ["sync", "time"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1"
thiserror = "1"
rand = "0.9"
waitgroup = "0.1"
log = "0.4"
portable-atomic = "1.6"

[dev-dependencies]
chrono = "0.4.28"
