[package]
name = "webrtc-mdns"
version = "0.5.2"
authors = ["Rain Liu <yuliu@webrtc.rs>"]
edition = "2021"
description = "A pure Rust implementation of mDNS"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/webrtc-mdns"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/mdns"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "reuse_port" ]
reuse_port = []

[dependencies]
util = { version = "0.7.0", path = "../util", package = "webrtc-util", default-features = false, features = ["ifaces"] }

tokio = { version = "1.19", features = ["full"] }
socket2 = { version = "0.4.4", features = ["all"] }
log = "0.4.16"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.9.0"
chrono = "0.4.23"
clap = "3.2.6"

[[example]]
name = "mdns_query"
path = "examples/mdns_query.rs"
bench = false

[[example]]
name = "mdns_server"
path = "examples/mdns_server.rs"
bench = false

[[example]]
name = "mdns_server_query"
path = "examples/mdns_server_query.rs"
bench = false
