[package]
name = "webrtc-mdns"
version = "0.7.0"
authors = ["Rain Liu <yuliu@webrtc.rs>"]
edition = "2021"
description = "A pure Rust implementation of mDNS"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/webrtc-mdns"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/webrtc/tree/master/mdns"

[features]
default = [ "reuse_port" ]
reuse_port = []

[dependencies]
util = { version = "0.9.0", path = "../util", package = "webrtc-util", default-features = false, features = ["ifaces"] }

tokio = { version = "1.32.0", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
socket2 = { version = "0.5", features = ["all"] }
log = "0.4"
thiserror = "1"

[dev-dependencies]
env_logger = "0.11.3"
chrono = "0.4.28"
clap = "3"

[[example]]
name = "mdns_query"
path = "examples/mdns_query.rs"
bench = false

[[example]]
name = "mdns_server"
path = "examples/mdns_server.rs"
bench = false

[[example]]
name = "mdns_server_query"
path = "examples/mdns_server_query.rs"
bench = false
