[package]
name = "webrtc-mdns"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A pure Rust implementation of mDNS"
license.workspace = true
documentation = "https://docs.rs/webrtc-mdns"
homepage.workspace = true
repository = "https://github.com/webrtc-rs/webrtc/tree/master/mdns"

[features]
default = ["reuse_port"]
reuse_port = []

[dependencies]
util = { workspace = true, default-features = false, features = ["ifaces"] }

tokio = { version = "1.32.0", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
socket2 = { version = "0.5", features = ["all"] }
log = "0.4"
thiserror = "1"

[dev-dependencies]
env_logger = "0.11.3"
chrono = "0.4.28"
clap = "3"

[[example]]
name = "mdns_query"
path = "examples/mdns_query.rs"
bench = false

[[example]]
name = "mdns_server"
path = "examples/mdns_server.rs"
bench = false

[[example]]
name = "mdns_server_query"
path = "examples/mdns_server_query.rs"
bench = false
