[package]
name = "webrtc-media"
version = "0.6.1"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "A pure Rust implementation of WebRTC Media API"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/webrtc-media"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/media"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtp = { version = "0.8", path = "../rtp" }

byteorder = "1"
bytes = "1"
thiserror = "1"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
nearly_eq = "0.2"

[[bench]]
name = "audio_buffer"
harness = false
