[package]
name = "webrtc-media"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A pure Rust implementation of WebRTC Media API"
license.workspace = true
documentation = "https://docs.rs/webrtc-media"
homepage.workspace = true
repository = "https://github.com/webrtc-rs/webrtc/tree/master/media"

[dependencies]
rtp.workspace = true

byteorder = "1"
bytes = "1"
thiserror = "1"
rand = "0.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
nearly_eq = "0.2"

[[bench]]
name = "audio_buffer"
harness = false
