[package]
name = "rtcp"
version = "0.7.2"
authors = ["Rain Liu <yliu@webrtc.rs>", "Michael Uti <utimichael9@gmail.com>"]
edition = "2021"
description = "A pure Rust implementation of RTCP"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rtcp"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/rtcp"
rust-version = "1.60.0"

[dependencies]
util = { version = "0.7.0", path = "../util", package = "webrtc-util", default-features = false, features = ["marshal"] }

bytes = "1"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.19", features = ["sync"] }
tokio-test = "0.4.0" # must match the min version of the `tokio` crate above
