[package]
name = "rtcp"
version = "0.11.0"
authors = ["Rain Liu <yliu@webrtc.rs>", "Michael Uti <utimichael9@gmail.com>"]
edition = "2021"
description = "A pure Rust implementation of RTCP"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rtcp"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/webrtc/tree/master/rtcp"

[dependencies]
util = { version = "0.9.0", path = "../util", package = "webrtc-util", default-features = false, features = ["marshal"] }

bytes = "1"
thiserror = "1"
